--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-gunicorn = "*"
-whitenoise = "*"
+django = "3.1.7"
+gunicorn = "20.1.0"
+whitenoise = "5.2.0"
+django-heroku = "7.51.0"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.9.1"
