--- a/Pipfile
+++ b/Pipfile
@@ -4,25 +4,24 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-<<<<<<< HEAD
-django = "3.1.7"
-gunicorn = "20.1.0"
-whitenoise = "5.2.0"
-django-heroku = "7.51.0"
-=======
 asgiref = "==3.3.1"
+certifi = "==2020.12.5"
+chardet = "==4.0.0"
+dj-database-url = "==0.5.0"
+django-heroku = "==0.0.0"
 gunicorn = "==20.1.0"
+heroku = "==0.1.4"
+idna = "==2.10"
+python-dateutil = "==1.5"
+python-decouple = "==3.4"
 pytz = "==2021.1"
+requests = "==2.25.1"
 sqlparse = "==0.4.1"
+urllib3 = "==1.26.4"
 whitenoise = "==5.2.0"
 Django = "==3.1.7"
-<<<<<<< HEAD
->>>>>>> master
-=======
-heroku = "7.51.0"
->>>>>>> master
 
 [dev-packages]
 
 [requires]
-python_version = "3.9.1"
+python_version = "3.9"
