--- a/Pipfile
+++ b/Pipfile
@@ -4,112 +4,24 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-python3==3.9.1
-aiohttp==3.7.3
-amqp==5.0.2
-apipkg==1.5
-appdirs==1.4.4
-arabic-reshaper==2.1.1
-asgiref==3.3.1
-async-timeout==3.0.1
-attrs==20.3.0
-autopep8==1.5.4
-beautifulsoup4==4.9.3
-billiard==3.6.3.0
-celery==5.0.4
-certifi==2020.12.5
-cfgv==3.2.0
-chardet==3.0.4
-click==7.1.2
-click-didyoumean==0.0.3
-click-plugins==1.1.1
-click-repl==0.1.6
-conda==4.3.16
-coverage==5.3
-covid==2.4.0
-decouple==0.0.7
-defusedxml==0.5.0
-discord.py==1.6.0
-distlib==0.3.1
-dj-database-url==0.4.2
-Django==3.1.4
-django-crispy-forms==1.10.0
-django-heroku==0.0.0
-django-storages==1.10.1
-django-tinymce==3.2.0
-django-widget-tweaks==1.4.8
-execnet==1.7.1
-filelock==3.0.12
-firebase==3.0.1
-Flask==1.1.2
-future==0.18.2
-greenlet==1.0a1
-gunicorn==20.0.4
-heroku==0.1.4
-html5lib==1.1
-identify==1.5.10
-idna==2.6
-iniconfig==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.11.2
-kombu==5.0.2
-MarkupSafe==1.1.1
-multidict==5.1.0
-nodeenv==1.5.0
-oauthlib==2.0.6
-packaging==20.8
-Pillow==8.0.1
-pipenv==2020.11.15
-playwright==0.162.2
-pluggy==0.13.1
-pre-commit==2.9.3
-prompt-toolkit==3.0.8
-psycopg2-binary==2.8.6
-py==1.10.0
-pycodestyle==2.6.0
-pycosat==0.6.3
-pydantic==1.7.3
-pyee==8.1.0
-pygame==2.0.0
-PyJWT==1.5.3
-pyparsing==2.4.7
-PyPDF2==1.26.0
-pytest==6.2.0
-pytest-base-url==1.4.2
-pytest-cov==2.10.1
-pytest-django==4.1.0
-pytest-forked==1.3.0
-pytest-playwright==0.0.9
-pytest-xdist==2.1.0
-python-bidi==0.4.2
-python-dateutil==1.5
-python3-openid==3.1.0
-pytz==2017.3
-PyYAML==5.3.1
-redis==3.5.3
-reportlab==3.5.59
-requests==2.18.4
-requests-oauthlib==0.8.0
-rope==0.18.0
-ruamel.yaml==0.16.12
-six==1.11.0
-social-auth-app-django==2.1.0
-social-auth-core==1.7.0
-soupsieve==2.1
-sqlparse==0.3.1
-toml==0.10.2
-typer==0.3.2
-typing-extensions==3.7.4.3
-urllib3==1.22
-vine==5.0.0
-virtualenv==20.2.2
-virtualenv-clone==0.5.4
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==1.0.1
-whitenoise==3.3.1
-xhtml2pdf==0.2.5
-yarl==1.6.3
+asgiref = "==3.3.1"
+certifi = "==2020.12.5"
+chardet = "==4.0.0"
+dj-database-url = "==0.5.0"
+django-heroku = "==0.0.0"
+gunicorn = "==20.1.0"
+heroku = "==0.1.4"
+idna = "==2.10"
+python-dateutil = "==1.5"
+python-decouple = "==3.4"
+pytz = "==2021.1"
+requests = "==2.25.1"
+sqlparse = "==0.4.1"
+urllib3 = "==1.26.4"
+whitenoise = "==5.2.0"
+Django = "==3.1.7"
+pyrebase4 = "4.4.3"
+
 [dev-packages]
 
 [requires]
