--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,1 @@
-asgiref==3.3.1
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-
-dj-database-url==0.5.0
-Django==3.1.7
-django-heroku==0.0.0
-
-
-gunicorn==20.1.0
-heroku==0.1.4
-httplib2==0.19.0
-idna==2.10
-jwcrypto==0.8
-jws==0.1.3
-oauth2client==3.0.0
-protobuf==3.15.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pycryptodome==3.4.3
-pyparsing==2.4.7
-
-
-python-dateutil==1.5
-python-decouple==3.4
-python-jwt==2.0.1
-pytz==2021.1
-requests==2.11.1
-requests-toolbelt==0.7.0
-rsa==4.7.2
-six==1.15.0
-sqlparse==0.4.1
-urllib3==1.26.4
-whitenoise==5.2.0
+Django
